32-aws-eks-ecomm-2-istio/auth/auth-k8/auth-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: auth-vs
  namespace: shoppingportal  
spec:
  gateways:
  - shoppingportal-gateway
  hosts:
   - "*"
  http:
  - match:
    - uri:
        prefix: /authms
    route:
    - destination:
        host: auth-svc.shoppingportal.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /authui
    route:
    - destination:
        host: authui-svc.shoppingportal.svc.cluster.local
        port:
          number: 80
